force-app/main/default/objects/ServiceResource/fields/Adjuster__c.field-meta.xml
<CustomField>
    <fullName>Adjuster__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if the service resource is an Adjuster.</description>
    <inlineHelpText>Check this box if the service resource is an adjuster.</inlineHelpText>
    <label>Adjuster</label>
    <type>Checkbox</type>
</CustomField>