force-app/main/default/objects/ServiceResource/fields/FSL__GanttLabel__c.field-meta.xml
<CustomField>
    <fullName>FSL__GanttLabel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gantt Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>