force-app/main/default/objects/ServiceResource/fields/Personal_Address__c.field-meta.xml
<CustomField>
    <fullName>Personal_Address__c</fullName>
    <formula>RelatedRecord.Street &amp; BR() &amp;
RelatedRecord.City &amp; &quot;, &quot; &amp;
RelatedRecord.State &amp; &quot; &quot; &amp;
RelatedRecord.PostalCode &amp; BR() &amp;
RelatedRecord.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Address</label>
    <type>Text</type>
</CustomField>