force-app/main/default/objects/ServiceResource/fields/SFS_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>SFS_Legacy_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>