force-app/main/default/objects/ServiceResource/fields/SFS_Legacy_Source__c.field-meta.xml
<CustomField>
    <fullName>SFS_Legacy_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>