force-app/main/default/objects/ServiceResource/fields/SFS_LunchBreakDuration__c.field-meta.xml
<CustomField>
    <fullName>SFS_LunchBreakDuration__c</fullName>
    <description>This field stores the lunch break duration for a service resource in minutes.</description>
    <label>Lunch Break Duration (min)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>