force-app/main/default/objects/ServiceResource/fields/SFS_Personal_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>SFS_Personal_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Personal Phone Number</label>
    <type>Phone</type>
</CustomField>