force-app/main/default/objects/ServiceResource/fields/SFS_Supervisor_s_Name__c.field-meta.xml
<CustomField>
    <fullName>SFS_Supervisor_s_Name__c</fullName>
    <formula>RelatedRecord.Manager.FirstName &amp; &quot; &quot; &amp;  RelatedRecord.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor&apos;s Name</label>
    <type>Text</type>
</CustomField>