force-app/main/default/objects/ServiceResource/fields/SFS_X6_ID__c.field-meta.xml
<CustomField>
    <fullName>SFS_X6_ID__c</fullName>
    <formula>RelatedRecord.SFS_X6_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>6 ID</label>
    <type>Text</type>
</CustomField>