force-app/main/default/objects/ServiceResource/fields/SVMXA360__FullyLoadedCost__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FullyLoadedCost__c</fullName>
    <description>This field shows the technician’s rate.</description>
    <label>Fully Loaded Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>